Fix spacing

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -22,7 +22,7 @@ html {
   font-family: 'Lato', sans-serif;
   font-weight: 400;
   text-align: center;
-  margin: 0 0 0 0;
+  margin: 0;
 }
 
 #subtitle {
@@ -95,7 +95,7 @@ hr.divider {
 
 .post-heading {
   width: 90%;
-  margin: auto;
+  margin: auto auto 4em auto;
   text-align: center;
   position: relative;
   top: 30px;
